--- a/galleries/index.html
+++ b/galleries/index.html
@@ -43,7 +43,7 @@
 <!-- /.navbar-header -->
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav"><li>
-<a href="../python-notebook/">Python notebook demo</a>
+<a href="../resources/">Resources</a>
 
                 
             </li></ul>
