Nikola auto commit.
Source commit: 2ee55024669603630926193198d3f2342234a38c
Nikola version: 7.8.10

--- a/resources/index.html
+++ b/resources/index.html
@@ -71,9 +71,9 @@ The University Library keeps a number of reference quality books in the collecti
 
     </header><div class="e-content entry-content" itemprop="articleBody text">
     <div>
-<h3>Web</h3>
+<h3 id="web">Web</h3>
 <p><a href="http://dataviz.tools/">Dataviz tools</a> maintain a resource of tools, tutorials and information to assist with data visualisation.</p>
-<h3>Books</h3>
+<h3 id="books">Books</h3>
 <p>The University Library keeps a number of reference quality books in the collection as a guide to producing high quality, informative graphics.</p>
 <ul>
 <li>
@@ -81,7 +81,7 @@ The University Library keeps a number of reference quality books in the collecti
 <li><a href="http://find.shef.ac.uk/SFD_VU2:SCOP_EVERYTHING:44SFD_ALMA_DS21203368840001441">Information is beautiful, David McCandless;</a></li>
 <li><a href="http://find.shef.ac.uk/SFD_VU2:LSCOP_SFD:44SFD_ALMA_DS21204443980001441">Beautiful visualization : [looking at data through the eyes of experts] / edited by Julie Steele and Noah Iliinsky.</a></li>
 </ul>
-<h3>Python Libraries <a name="python"></a>
+<h3 id="python-libraries">Python Libraries <a name="python"></a>
 </h3>
 <ul>
 <li><a href="https://python-graph-gallery.com/">Python Graph Gallery</a></li>
@@ -102,7 +102,7 @@ The University Library keeps a number of reference quality books in the collecti
 </ul>
 </li>
 </ul>
-<h3>R Libraries <a name="R"></a>
+<h3 id="r-libraries">R Libraries <a name="R"></a>
 </h3>
 <ul>
 <li>
@@ -116,7 +116,7 @@ The University Library keeps a number of reference quality books in the collecti
 </ul>
 </li>
 </ul>
-<h3>Hosting and Publishing Visualisations</h3>
+<h3 id="hosting-and-publishing-visualisations">Hosting and Publishing Visualisations</h3>
 <ul>
 <li>
 <a name="jupyter"></a><a href="http://jupyter.org/">Jupyter notebooks</a> are self contained documents for writing, executing and publishing analysis.
@@ -132,7 +132,7 @@ the resulting document is html easily shared and made interactive with other tec
 <li>
 <a href="https://plot.ly/api/">Plotly</a> enable generation of plots with the option to publish the visualisations online.</li>
 </ul>
-<h4>Javascript</h4>
+<h4 id="javascript">Javascript</h4>
 <ul>
 <li>
 <a name="D3"></a><a href="https://github.com/d3/d3/wiki/Gallery">D3.js</a> is an underlying technology for many of the browser based visualisations. To further expand on the plotting abilities, or generate custom interactions we recommed considering this library.</li>
@@ -143,7 +143,7 @@ the resulting document is html easily shared and made interactive with other tec
 </ul>
 </li>
 </ul>
-<h4>Frontend</h4>
+<h4 id="frontend">Frontend</h4>
 <ul>
 <li>
 <a name="vega"></a><a href="https://vega.github.io/">Vega</a> is a declaritive tool for generating interactive visualisations in the browser.</li>
