Nikola auto commit.
Source commit: 3c8be25f5518562e26da80dd6b37be05765d1422
Nikola version: 7.8.10

--- a/resources/index.html
+++ b/resources/index.html
@@ -43,11 +43,17 @@ The University Library keeps a number of reference quality books in the collecti
         </div>
 <!-- /.navbar-header -->
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
-            <ul class="nav navbar-nav"><li class="active">
+            <ul class="nav navbar-nav">
+<li class="active">
 <a href=".">Resources <span class="sr-only">(active)</span></a>
-
-                
+            </li>
+<li class="dropdown">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tutorials <b class="caret"></b></a>
+            <ul class="dropdown-menu"><li>
+<a href="../tutorials/dash/">Dash</a>
             </li></ul>
+</li>
+</ul>
 <ul class="nav navbar-nav navbar-right">
 <li>
     <a href="index.md" id="sourcelink">Source</a>
@@ -163,7 +169,7 @@ the resulting document is html easily shared and made interactive with other tec
         <!--End of body content-->
 
         <footer id="footer">
-            Contents © 2017         <a href="mailto:rdm@sheffield.ac.uk">University of Sheffield</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
+            Contents © 2018         <a href="mailto:rdm@sheffield.ac.uk">University of Sheffield</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
             
         </footer>
 </div>
