--- a/orda/visualisation-yaml/index.html
+++ b/orda/visualisation-yaml/index.html
@@ -40,11 +40,17 @@
         </div>
 <!-- /.navbar-header -->
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
-            <ul class="nav navbar-nav"><li>
+            <ul class="nav navbar-nav">
+<li>
 <a href="../../resources/">Resources</a>
-
-                
+            </li>
+<li class="dropdown">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tutorials <b class="caret"></b></a>
+            <ul class="dropdown-menu"><li>
+<a href="../../tutorials/dash/">Dash</a>
             </li></ul>
+</li>
+</ul>
 <ul class="nav navbar-nav navbar-right">
 <li>
     <a href="index.md" id="sourcelink">Source</a>
@@ -177,7 +183,7 @@
         <!--End of body content-->
 
         <footer id="footer">
-            Contents © 2017         <a href="mailto:rdm@sheffield.ac.uk">University of Sheffield</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
+            Contents © 2018         <a href="mailto:rdm@sheffield.ac.uk">University of Sheffield</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
             
         </footer>
 </div>
