add updated schedule

--- a/pages/launch/hub-launch-schedule.html
+++ b/pages/launch/hub-launch-schedule.html
@@ -117,7 +117,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Event Schedule</h1>
+
 <h4 class="date"><em>4/24/2018</em></h4>
 
 </div>
@@ -126,28 +126,44 @@ $(document).ready(function () {
 <div id="data-visualisation-hub-launch" class="section level2">
 <h2>Data Visualisation Hub Launch</h2>
 <hr />
+<div id="introduction" class="section level3">
+<h3>Introduction</h3>
+<div id="welcome" class="section level4">
+<h4><strong>Welcome</strong></h4>
+<div id="jez-cope-university-of-sheffield-library" class="section level5">
+<h5><strong><em>Jez Cope</em></strong>, <em>University of Sheffield, Library</em></h5>
+</div>
+</div>
+<div id="introduction-to-the-initiative" class="section level4">
+<h4><strong>Introduction to the initiative</strong></h4>
+<div id="anne-horn-university-of-sheffield-director-of-library-services-university-librarian" class="section level5">
+<h5><strong><em>Anne Horn</em></strong>, <em>University of Sheffield, Director of Library Services &amp; University Librarian</em></h5>
+<p><br></p>
+</div>
+</div>
+</div>
 <div id="main-talks" class="section level3">
 <h3>Main Talks</h3>
 <div id="data-visualisation-in-academic-research" class="section level4">
 <h4><strong>1. Data visualisation in academic research</strong></h4>
 <div id="helen-kennedy-university-of-sheffield-sociological-studies" class="section level5">
 <h5><strong><em>Helen Kennedy</em></strong>, <em>University of Sheffield, Sociological Studies</em></h5>
-<p>NA</p>
+<p>In this talk, Helen Kennedy will draw on a range of visualization research projects (such as Seeing Data (<a href="http://seeingdata.org/" class="uri">http://seeingdata.org/</a>) and INDVIL (<a href="https://indvil.org/" class="uri">https://indvil.org/</a>)) to reflect on the possibilities that dataviz opens up, the pragmatic challenges of realising dataviz’s potential, the conventions that constrain what can be done with dataviz, and the contexts within which all of this takes place. <br></p>
 </div>
 </div>
 <div id="the-interactive-data-network-at-the-university-of-oxford" class="section level4">
 <h4><strong>2. The Interactive Data Network at the University of Oxford</strong></h4>
 <div id="martin-john-hadley-university-of-oxford-it-services" class="section level5">
 <h5><strong><em>Martin John Hadley</em></strong>, <em>University of Oxford, IT Services</em></h5>
-<p>OxShef Dataviz &amp; Reproducible Dataviz workflows @ University of Oxford</p>
+<p>OxShef Dataviz &amp; Reproducible Dataviz workflows @ University of Oxford <br></p>
 </div>
 </div>
 <div id="dataviz.shef-our-plans-hopes-for-the-hub." class="section level4">
 <h4><strong>3. dataviz.shef: Our plans &amp; hopes for the Hub.</strong></h4>
 <div id="anna-krystalli-university-of-sheffield-research-software-engineering" class="section level5">
 <h5><strong><em>Anna Krystalli</em></strong>, <em>University of Sheffield, Research Software Engineering</em></h5>
-<p>An overview of the establshment of <strong>dataviz.shef</strong>, the work we’ve done, the resources available through the inititative and our hopes for the future of the Data Visualisation Hub.</p>
-<hr />
+<p>An overview of the establshment of <strong>dataviz.shef</strong>, the work we’ve done, the resources available through the inititative and our hopes for the future of the Data Visualisation Hub. <br></p>
+<p><br></p>
 </div>
 </div>
 </div>
@@ -207,7 +223,58 @@ $(document).ready(function () {
 <div id="sam-clarke-university-of-sheffield-civil" class="section level5">
 <h5><strong><em>Sam Clarke</em></strong>, <em>University of Sheffield, Civil</em></h5>
 <p>Taking point data sources and using them to develop a full characterisation of the output from a buried explosive charge.</p>
+<p><br></p>
+<hr />
 </div>
+</div>
+</div>
+<div id="speaker-bios" class="section level3">
+<h3>Speaker Bios</h3>
+<div id="helen-kennedy" class="section level4">
+<h4><strong>Helen Kennedy</strong></h4>
+<p>Helen Kennedy is Professor of Digital Society at the University of Sheffield. Her research has traversed digital media landscapes, covering topics from web homepages to data visualisation, from race, class, gender inequality to learning disability and web accessibility, and from web design to social media data mining. She recently led Seeing Data (www.seeingdata.org), which explored how non-experts relate to data visualisations (funded by the AHRC). Other recent research explored what happens when social media data mining becomes widespread – this research was funded by an AHRC Fellowship and published as a monograph entitled Post, Mine, Repeat: social media data mining becomes ordinary (Palgrave Macmillan, 2016).</p>
+<p>She is currently researching what people think about how media organisations use their data, as part of an AHRC-funded network Data, Diversity and Inequality in the Creative Industries. She is also a member of the INDVIL (Innovative Data Visualization and Visual-Numeric Literacy, <a href="http://indvil.org/" class="uri">http://indvil.org/</a>, funded by the Norwegian Research Council) project team and is editing a book with INDVIL Director Martin Engebretsen called Data Visualization in Society.</p>
+<p>She is interested in critical approaches to digital life, especially big data and data visualisation. This includes thinking about how to make data more accessible to non-expert citizens, how people live with what has been called ‘datafication’, how data analytics processes discriminate, and how data mining could enable, rather than inhibit, well-being. <br></p>
+</div>
+<div id="martin-john-hadley" class="section level4">
+<h4><strong>Martin John Hadley</strong></h4>
+<p>I’m the technical lead for the Interactive Data Network at University of Oxford - a service promoting and supporting the use of interactive data visualisations to communicate research data, read more at <a href="http://idn.it.ox.ac.uk" class="uri">http://idn.it.ox.ac.uk</a> <br></p>
+</div>
+<div id="anna-krystalli" class="section level4">
+<h4><strong>Anna Krystalli</strong></h4>
+<p>A Research Software Engineer at the University with a background in marine macroecology. During my PhD I was drawn to coding and the data science elements of the work, including interactive data apps and visualisations. Now I help researchers do more with their code and data. <br></p>
+</div>
+<div id="mark-taylor" class="section level4">
+<h4><strong>Mark Taylor</strong></h4>
+<p>I’m a lecturer in quantitative methods <br></p>
+</div>
+<div id="paul-brindley" class="section level4">
+<h4><strong>Paul Brindley</strong></h4>
+<p>Paul is lecturer in Landscape Planning. He has over fifteen years’ experience using geographical information science (GIS), spatial analysis and quantitative statistics. He uses his expertise in computer programming and geocomputation in order to automate operations at scale. <br></p>
+</div>
+<div id="antonio-de-la-vega-de-leon" class="section level4">
+<h4><strong>Antonio de la Vega de Leon</strong></h4>
+<p>I’m a chemoinformatician, mixing computer science and chemistry in my research. I currently work as a postdoctoral researcher in the University of Sheffield, as part of a Marie Curie project against Alzheimer’s diesease (D3i4AD). A large part of my PhD had to do visualizing high dimensional chemical spaces. <br></p>
+</div>
+<div id="chris-cooney" class="section level4">
+<h4><strong>Chris Cooney</strong></h4>
+<p>A postdoctoral research associate in APS studying the evolution and diversification of birds <br></p>
+</div>
+<div id="phil-jones" class="section level4">
+<h4><strong>Phil Jones</strong></h4>
+<p>Phil is a post-doc research associate working in the University of Sheffield’s Centre for Criminological Research. <br></p>
+</div>
+<div id="dan-olner" class="section level4">
+<h4><strong>Dan Olner</strong></h4>
+<p>Dan is a researcher in the Sheffield Methods Institute working on a diverse bunch of projects, from modelling whether houses can see wind turbines or green space to making 3D prints of Census data to making monsters using a Kinect motion sensor. He also occasionally runs day workshops on data wrangling and visualisation in R. <br></p>
+</div>
+<div id="tom-french" class="section level4">
+<h4><strong>Tom French</strong></h4>
+<p>An organiser of Sheffield Data for Good. And Data Design Manager at Good Things Foundation, a national charity focusing on tackling social challenges through a network of hyper-local, community-based organisations. <br></p>
+</div>
+<div id="sam-clarke" class="section level4">
+<h4><strong>Sam Clarke</strong></h4>
+<p>Senior Lecturer in Geotechnics with a penchant for Blast <br></p>
 </div>
 </div>
 </div>
